# Road-Sign-Identification

./: .gitignore  CMakeLists.txt  README.md
road-signs/pedestrian/: testing.xml  training.xml
road-signs/speed-limit/: testing.xml  training.xml  training.xml~
road-signs/stop/: testing.xml  training.xml
road-signs/yeild/: testing.xml  training.xml
src/: detect.cpp
trained_detectors/: pedestrian_detector.svm  speed_detector.svm  stop_detector.svm  yeild_detector.svm
